# sqlalchemy_schemadisplay

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  sqlalchemy_schemadisplay.py  test_sqlalchemy_schemadisplay.py  tox.ini
.github/workflows/: cd.yml  ci.yml  python-package.yml  release.yml  test-and-release.yml  test-with-tox.yml
sqlalchemy_schemadisplay/: __init__.py  db_diagram.py  model_diagram.py  utils.py
sqlalchemy_schemadisplay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_schema_graph.py  test_uml_graph.py  utils.py
